[package]
name = "gd-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.15", features = ["derive"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs", "compression-zstd"] }

[profile.release]
lto = "thin"
strip = true
